# FluidNetVortex

./: .gitattributes  .gitignore
.github/workflows/: ci.yml
_plan/: overview.md
ml/: cuda_check.py  pyproject.toml  tox.ini
ml/config/: config.py
ml/dataset/: npz_sequence.py
vdb-tools/: render_npz_field_to_png.py  vdb_to_numpy.py
